--- a/style.css
+++ b/style.css
@@ -11,3 +11,10 @@
         margin: 0;
         padding: 0;
       }
+
+      .catch {
+        position: absolute;
+        top: 95%;
+        left: 50%;
+        transform: translateX(-50%);
+      }
